[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling in LLMs via constrained decoding"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.5",
    "llm-sdk",
]

[dependency-groups]
dev = [
    "flake8>=6.0",
    "mypy>=1.5",
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.uv.sources]
llm-sdk = { path = "llm_sdk", editable = true }

[tool.mypy]
exclude = ['^llm_sdk/', '\.venv']
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]